<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Book_Activity"
        android:background="#FFFFFF">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">
            
                <ImageView
                        android:layout_width="240dp"
                        android:layout_marginTop="25dp"
                        android:layout_height="250dp"
                        android:background="#2d2d2d"
                        android:scaleType="centerCrop"
                        android:id="@+id/bookthumbnail" android:contentDescription="@string/todo"/>

                <TextView
                        android:id="@+id/txtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="40sp"
                        android:textStyle="normal"
                        android:textColor="#000000"
                        android:gravity="center"
                        android:text="@string/r_n_ba_l"/>
            <TextView
                    android:id="@+id/txtCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:background="#DADADA"
                    android:layout_marginTop="15dp"
                    />
            <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_klama"
                    android:textSize="18sp"
                    android:layout_marginTop="90dp"/>
            <Button

                    android:id="@+id/linkbutton"
                    android:layout_width="wrap_content"
                    android:text="@string/r_n_dene"
                    android:textStyle="italic"
                    android:textColor="#ffff"
                    android:padding="8dp"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="90dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>