<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content">


        <TextView
        android:gravity="top"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/baslik"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat"/>

        <TextView
                android:text="@string/bug1"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="100dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">



            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="130dp"
                    android:src="@drawable/light"
                    android:contentDescription="@string/todo99"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="İleri"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="#fff"
            android:background="@drawable/back2_bg"
            android:id="@+id/alertbtn"/>
</RelativeLayout>
